established link to first page

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -10,9 +10,9 @@
 
 <body>
     <nav class="nav">
-        <a href="/login.mustache">Login</a>
-        <a href="/profile.mustache">Profile</a>
-        <a href="/signup.mustache">Sign Up</a>
+        <a href="/login">Login</a>
+        <a href="/profile">Profile</a>
+        <a href="/signup">Sign Up</a>
     </nav>
     <br>
     <div class="welcome">
