--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -11,7 +11,7 @@
 <body>
     <h1>sign up!
         <h1>
-            <form>
+            <form class="form">
                 <label for="">name</label>
                 <input type="text" name="name" required>
                 <label for="">username</label>
