--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <h1>Welcome to {{name}}'s Profile Page</h1>
+    <div class="container">
+        <h1>Welcome to {{name}}'s Profile Page</h1>
+        <p>email: {{email}}</p>
+        <p>username: {{username}}</p>
+    </div>
 </body>
 
 </html>
