linked all pages

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
     <div="container">
-        <form class="form">
+        <form action="/login" method="POST" class="form">
             <label for="">username</label>
             <input type="text" name="username"> <br>
             <label for="">password</label>
