--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
     <h1>sign up!
         <h1>
-            <form class="form">
+            <form action="/signup" method="POST" class="form">
                 <label for="">name</label>
                 <input type="text" name="name" required>
                 <label for="">username</label>
