--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Welcome to {{name}}'s Profile Page</h1>
-        <p>email: {{email}}</p>
-        <p>username: {{username}}</p>
+        <h1>Welcome to {{user.name}}'s Profile Page</h1>
+        <p>username: {{user.Username}}</p>
+        <p>email: {{user.email}}</p>
     </div>
 </body>
 
