false password renders signup pg

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav>
         <a href="/login">Login</a>
         <a href="/profile">Profile</a>
         <a href="/signup">Sign Up</a>
