--- a/views/login.mustache
+++ b/views/login.mustache
@@ -11,6 +11,11 @@
 
 <body>
     <div="container">
+        <nav>
+            <a href="/">Home</a>
+            <a href="/signup">Signup</a>
+            <a href="/profile">Profile</a>
+        </nav>
         <form action="/login" method="POST" class="form">
             <label for="">username</label>
             <input type="text" name="username"> <br>
