--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <h1>sign up!
-        <h1>
+    <h1>sign up!</h1>
+    <div class="container">
+            <nav>
+            <a href="/">Home</a>
+            <a href="/signup">Signup</a>
+            <a href="/profile">Profile</a>
+            </nav>
             <form action="/signup" method="POST" class="form">
                 <label for="">name</label>
                 <input type="text" name="name" required>
@@ -23,6 +28,7 @@
                 <input type="password" name="password" required>
                 <button type="submit">Sign Up</button>
             </form>
+        </div>
 </body>
 
 </html>
