--- a/views/home.mustache
+++ b/views/home.mustache
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="container">
     <nav>
         <a href="/login">Login</a>
         <a href="/profile">Profile</a>
@@ -18,6 +19,7 @@
     <br>
     <div class="welcome">
         <h1>Welcome to the Home Page</h1>
+    </div>
     </div>
 </body>
 
