--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -11,6 +11,10 @@
 
 <body>
     <div class="container">
+        <nav>
+            <a href="/">Home</a>
+            <a href="/signup">Signup</a>
+        </nav>
         <h1>Welcome to {{user.name}}'s Profile Page</h1>
         <p>username: {{user.Username}}</p>
         <p>email: {{user.email}}</p>
